fix the spacing and width of the pr body; add events section; add test timer for live time for each timezone

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,6 +25,8 @@ body {
 }
 
 .header-scroll {
+    height: 130px;
+
     .search-bar {
         left: calc(var(--original-left) - 74px);
         width: 876px;
@@ -48,7 +50,6 @@ body {
     .dropdown{
         left: calc(var(--original-left) + 139px);
     }
-
 
 }
 
@@ -192,11 +193,13 @@ body {
 }
 
 .separator {
-    width: 1920px;
+    width: 100vw;
     height: 0;
+    padding-top: 0;
+    background-color: white;
     position: absolute;
     border: 1px #D7D7D7 solid;
-    top: 144px;
+    top: 130px;
     left: 0;
 }
 
@@ -278,7 +281,7 @@ body {
 /* LANGUAGE DROPDOWN IN NAV BAR */
 .dropdown {
     position: absolute;
-    top: calc(4px + 48px + 8px);
+    top: calc(4px + 48px);
     padding-top: 20px;
     display: inline-block;
     transition: left 0.3s ease;
@@ -426,7 +429,6 @@ body {
 
 .connect-icons {
     padding-top: 23.88px;
-    display: flex;
     gap: 27.85px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
@@ -437,8 +439,8 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: left top;
-    width: 16px;
-    height: 16px;
+    width: 32px;
+    height: 32px;
 }
 
 .icon-footer.linkedin {
@@ -503,14 +505,14 @@ body {
 }
 
 .press-release-headline-logo {
-    max-width: 266px; 
+    max-width: 266px;
     padding: 8px;
     margin-bottom: 32px;
 }
 
 .press-release-headline-logo img {
     width: 100%;
-    height: auto;
+    height: 60px;
     display: block;
 }
 
@@ -545,10 +547,11 @@ body {
     font-weight: 500;
     line-height: 40px;
     word-wrap: break-word;
+    margin-bottom: 32px;
 }
 
 .press-release-body-container {
-    width: 1013px;
+    width: 1045px; /* + 32px as adjustment */
     margin-left: 229px;
     margin-right: 676px;
     margin-bottom: 72px;
@@ -664,7 +667,7 @@ body {
 }
 
 p.title-pr {
-    max-width: 713px;
+    max-width: 100%;
     width: 713px;
     color: #242424;
     font-size: 18px;
@@ -674,3 +677,66 @@ p.title-pr {
     overflow: hidden;
     text-overflow: ellipsis; 
 }
+
+/* EVENTS */
+.events-container {
+    width: 100vw;
+    margin-bottom: 72px;
+}
+
+.events-container-title {
+    color: #242424;
+    font-size: 24px;
+    font-family: Inter;
+    font-weight: 500;
+    line-height: 40px;
+    word-wrap: break-word;
+    padding-left: 4.583%;
+    padding-bottom: 24px;
+}
+
+.box-section-header {
+    padding-left: 4.583%;
+}
+
+.row {
+    width: 100%;
+}
+
+.event-item img {
+    width: 500px;
+    height: auto;
+}
+
+.event-item p {
+    margin-bottom: 0;
+}
+
+.event-item .card-label,
+.news-items .news-item .card-label {
+    font-size: 20px;
+    color: black;
+    line-height: 120%;
+    letter-spacing: -0.3px;
+}
+
+
+.event-item .card-sub-label,
+.news-items .news-item .card-sub-label,
+.press-release-category>span {
+    font-size: 16px;
+    color: #4D4D4D;
+    font-weight: 600;
+    line-height: 150%;
+    letter-spacing: -0.3px;
+}
+
+.event-item .card-date,
+.news-items .news-item .card-date {
+    font-size: 16px;
+    color: #676565;
+    font-weight: 400;
+    line-height: 150%;
+    letter-spacing: -0.3px;
+}
+
